--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -5,3 +5,9 @@
 [x-cloak] {
     display: none !important;
 }
+
+input[type="checkbox"]:checked:enabled:focus,
+input[type="checkbox"]:checked,
+input[type="checkbox"]:hover {
+    background-color: oklch(59.2% 0.249 0.584);
+}
